# copperhead

./: README.md  copperhead.py  magic.py  main.py  pyproject.toml  requirements.txt  sitecustomize.py
copperhead/: __init__.py
