[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "copperhead"
authors = [{name = "Alyce Osbourne"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[dependencies]
rustimport = ">=1.4.0"
Jinja2 = ">=3.1.3"
